Fix alignment issues in nav

--- a/components/nav/index.module.scss
+++ b/components/nav/index.module.scss
@@ -30,6 +30,7 @@
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
   gap: var(--space-lg);
 }
 
@@ -66,6 +67,11 @@
 
 .dropdownTrigger {
   position: relative;
+
+  & > a {
+    display: flex;
+    align-items: center;
+  }
 
   &:hover .dropdownList,
   &:focus-within .dropdownList {
